LM shelter configs and various fixes

--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMAscentTaxiBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMAscentTaxiBDB.cfg
@@ -43,16 +43,10 @@ PART
 	//	============================================================================
 
 	// --- standard part parameters ---
-	//	added:
-	//		+60 lbs for insulation/covers/radiators
-	//	removed: 
-	//		VHF Xceiver & Diplexer: 13.1 lbs
-	//		VHF In-Flight Antenna: 4.8 lbs
-	//		EVA Antenna Sys: 2.0 lbs
-	//		Instrument Science Equipment: 15.7 lbs
-	//		Furnishings: 35.6 lbs	(remove half since hammocks etc. no longer needed)
-	//	overall delta: -11.2 lbs
-	mass = 1.53467		//1794.05 kg - 85.95 kg (batteries) - 226.4 kg (APS tank) - 20.97 kg (RCS tank) + 12.75 kg (LS tank) + 72.27 kg (LS resources) - 6 kg (Habitat Atmosphere) - 5.08 kg (Taxi Delta) = 1534.67 kg
+	//	Taxi Ascent Module recommended configuration inert mass: 4242 lbs (1924 kg)
+	//	Taxi Ascent Module inert mass less Docking Port, LMAE, Decoupler: 3903.6 lbs (1770.64 kg)
+	//	Assuming all other components ~equivelant to standard LM
+	mass = 1.48846		//1770.64 kg - 85.95 kg (batteries) - 211.15 kg (APS tank) - 21.15 kg (RCS tank) + 42.07 kg (LS resources) - 6 kg (Habitat Atmosphere) = 1488.46 kg
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -66,7 +60,7 @@ PART
 	skinTempTag = MLI
 	internalTempTag = Instruments
 	skinInsulationTag = True
-	paintEmissivityTag = 0.1	//partly painted
+	paintEmissivityTag = 0.1	//improved insulation
 
 	tags = kane apollo LMTEST lm lem lander
 
@@ -215,8 +209,8 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = SM-IV
-		volume = 2583
-		basemass = 1.53467
+		volume = 2536.1		//smaller margins, 50 L extra?
+		basemass = 1.48846
 
 		//	Two batteries ~16.6 kWh (28 V @ 296 Ah each).
 
@@ -357,13 +351,12 @@ PART
 {
 	@description ^= :$: Supports a crew of three for up to 46 hours of active operations, but excess water should be removed from the descent stage.
 
-	//remove same mass as standard LM since this is based on standard LM, just with some parts omitted
-	@mass -= 0.08502		//-72.27 kg (LS Resources) - 12.75 kg (LS Tanks)
+	@mass -= 0.05213		// - 10.06 kg (LS tank) - 42.07 kg (LS resources)
 
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 94.0
-		@basemass -= 0.08502
+		@volume += 98.0
+		@basemass -= 0.05213
 
 		TANK
 		{
@@ -382,8 +375,8 @@ PART
 		TANK
 		{
 			name = Oxygen
-			amount = 1544
-			maxAmount = 1544
+			amount = 2316
+			maxAmount = 2316
 		}
 
 		TANK
@@ -411,7 +404,7 @@ PART
 		{
 			name = CarbonDioxide
 			amount = 0
-			maxAmount = 1023
+			maxAmount = 2316
 		}
 	}
 
