--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMShelterBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMShelterBDB.cfg
@@ -34,10 +34,13 @@ PART
 	subcategory = 0
 	title = AES LM Shelter
 	manufacturer = #roMfrGrumman
-	description = Longer surface stays require facilities and consumables beyond what can be carried in a single LM lander. This is a dedicated shelter module - while it sacrifices the ascent propulsion system, it can sustain two crew members for up to a month on the surface. Includes surface communications, deployable insulation, and an expandable airlock - make sure your front leg does not have the "porch". Use the "truck" variant of the descent tank assembly for autonomous landing.
+	description = Longer surface stays require facilities and consumables beyond what can be carried in a single LM lander. This is a dedicated shelter module. Includes fuel cells, deployable insulation, and an expandable airlock - make sure your front leg does not have the "porch". Requires additional oxygen tanks to be added to the descent module to supply the crew and fuel cells.
 
 	// --- standard part parameters ---
-	mass = 1.53975
+	//	Shelter recommended configuration inert mass (including descent stage): 10586 lbs - 514 lbs crew equipment = 10072 lbs (4568.58 kg)
+	//	Shelter inert mass less LM Descent Stage, SNAP-27: 5650.5 lbs (2563.03 kg)
+	//	Assuming all other components ~equivalent to standard LM
+	mass = 2.52705		//2563.03 kg - 10.58 kg (RCS tank) - 102.6 kg (Hydrogen tank) - 6 kg (Habitat Atmosphere) + 83.20 kg (LS Resources) = 2527.05
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
@@ -225,8 +228,8 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = SM-IV
-		volume = 300
-		basemass = 1.53975
+		volume = 1382.3		//1182.3 L + 200 L excess
+		basemass = 2.52705
 
 		//	Batteries removed, relies on descent batteries, RTG and fuel cells
 		//Propellant: 253.25 lbs (RCS only)
@@ -250,6 +253,15 @@ PART
 			amount = 2666
 			maxAmount = 2666
 		}
+		TANK
+		{
+			//2x21.25 lbs Hydrogen tanks (42.5 lbs, 19.2777 kg)
+			name = Hydrogen
+			amount = 214435
+			maxAmount = 214435
+		}
+		//560.4 lbs + 9 lbs Oxygen tanks (596.4 lbs, 258.2755 kg)
+		//installed in descent stage
 	}
 
 	//	============================================================================
@@ -291,7 +303,7 @@ PART
 			name = Silver
 			TEXTURE
 			{
-				texture = Bluedog_DB/Parts/Apollo/Paint/Silver/bluedog_LM_Descent_Silver
+				texture = ROCapsules/Assets/BDB/Apollo/Paint/Silver/bluedog_LM_Descent_Silver
 				// currentTexture = bluedog_LM_Descent
 				transform = polySurface5
 				transform = polySurface6
@@ -301,7 +313,7 @@ PART
 			TEXTURE
 			{
 				shaderProperty = _SpecMap
-				texture = Bluedog_DB/Parts/Apollo/Paint/Silver/bluedog_LM_Descent_Silver_Spec
+				texture = ROCapsules/Assets/BDB/Apollo/Paint/Silver/bluedog_LM_Descent_Silver_Spec
 				// currentTexture = bluedog_LM_Descent_Spec
 				transform = polySurface5
 				transform = polySurface6
@@ -348,16 +360,16 @@ PART
 //	TAC Life Support Compatibility
 //	================================================================================
 
-@PART[ROC-LEMAscentBDB]:FOR[ROCapsules]:NEEDS[TacLifeSupport]
+@PART[ROC-LEMShelterBDB]:FOR[ROCapsules]:NEEDS[TacLifeSupport]
 {
 	@description ^= :$: Supports a crew of two for up to 14 days of active operations.
 
-	@mass -= 0.08502		//Same as normal LM
+	@mass -= 0.1242		// - 41.0 kg (LS tank) - 83.20 kg (LS resources)
 
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume += 615.0
-		@basemass -= 0.08502
+		@volume += 426.47
+		@basemass -= 0.1242
 
 		TANK
 		{
@@ -368,18 +380,13 @@ PART
 
 		//Relies on descent stage water tank
 
-		TANK
-		{
-			name = Oxygen
-			amount = 18571
-			maxAmount = 18571
-		}
+		//Relies on descent stage oxygen tank
 
 		TANK
 		{
 			name = LithiumHydroxide
-			amount = 25.2
-			maxAmount = 25.2
+			amount = 22.37		//25.2 - 2.83 in descent stage
+			maxAmount = 22.37
 		}
 
 		TANK
@@ -440,4 +447,42 @@ PART
 			DumpExcess = False
 		}
 	}
+}
+
+//	================================================================================
+//	Configure RealAntennas
+//	================================================================================
+
+@PART[ROC-LEMShelterBDB]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+	//Subtract 44 kg for 28 dbm and 34 dbm TL 5 radios
+	//In reality, multiple radios shared both antennas
+	@mass -= 0.044
+
+	@MODULE[ModuleFuelTanks]
+	{
+		@basemass -= 0.044
+	}
+
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 3.0	//VHF Omnis. EVA omni and LM-CSM omni merged for simplicity
+		RFBand = VHF
+	}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		antennaDiameter = 0.66	//S-band dish. S-band Omnis not included
+		RFBand = S
+	}
+}
+
+//	================================================================================
+//	Final Pass to Make Sure TAC does not add extra resources
+//	================================================================================
+@PART[ROC-LEMShelterBDB]:BEFORE[zzzRealismOverhaul]
+{
+	!RESOURCE,*{}
 }
