--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMShelterBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMShelterBDB.cfg
@@ -13,6 +13,7 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Apollo/bluedog_LM_Shelter
+		rotation = 0, 180, 0
 	}
 	scale = 1.0
 	rescaleFactor = 1.5646
@@ -65,8 +66,8 @@ PART
 
 	INTERNAL
 	{
-	//	name = MEMInternals
-		name = Placeholder
+		name = ROC-LEMInternal
+		offset = 0, -0.25, 0
 	}
 
 	//	============================================================================
