--- a/GameData/ROCapsules/PartConfigs/LEMBDB/Waterfall_Support_LEMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/Waterfall_Support_LEMBDB.cfg
@@ -13,7 +13,7 @@
     }
 }
 
-@PART[ROC-LEMAscentBDB]:AFTER[ROWaterfall]:NEEDS[Waterfall]
+@PART[ROC-LEMAscentBDB|ROC-LEMAscentTaxiBDB|ROC-LEMShelterBDB|ROC-LEMTruckRCS3BDB|ROC-LEMTruckRCS4BDB]:AFTER[ROWaterfall]:NEEDS[Waterfall]
 {
     MODULE
     {
