Add retromotor waterfall

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/Waterfall_Support_MercuryBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/Waterfall_Support_MercuryBDB.cfg
@@ -34,3 +34,31 @@
         }
     }
 }
+
+@PART[ROC-MercuryPosigradeBDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+{
+    ROWaterfall
+    {
+        template = rowaterfall-srm-vac-1
+        audio = srm-1
+        position = 0,0,0
+        rotation = 0, 0, 0
+        scale = 0.015, 0.015, 0.010
+        useRelativeScaling = true
+        glow = ro-srm
+    }
+}
+
+@PART[ROC-MercuryRetroBDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+{
+    ROWaterfall
+    {
+        template = rowaterfall-srm-vac-1
+        audio = srm-1
+        position = 0,0,0.01
+        rotation = 0, 0, 0
+        scale = 0.037, 0.037, 0.037
+        useRelativeScaling = true
+        glow = ro-srm
+    }
+}
