--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/Waterfall_Support_GeminiBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/Waterfall_Support_GeminiBDB.cfg
@@ -136,3 +136,17 @@
         }
     }
 }
+
+@PART[ROC-GeminiRetroBDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+{
+    ROWaterfall
+    {
+        template = rowaterfall-srm-vac-1
+        audio = srm-1
+        position = 0,0,0
+        rotation = 0, 0, 0
+        scale = 0.057, 0.057, 0.057
+        useRelativeScaling = true
+        glow = ro-srm
+    }
+}
