Add inventory slots to all crewed parts

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule1.cfg
@@ -84,6 +84,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 2
+		packedVolumeLimit = 50
+	}
+
+	MODULE
+	{
 		name = ModuleAnimateGeneric
 		animationName = lightson
 		startEventGUIName = Lights On
