--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2MissionModule2.cfg
@@ -84,6 +84,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 4
+		packedVolumeLimit = 100
+	}
+
+	MODULE
+	{
 		name = ModuleAnimateGeneric
 		animationName = lightson
 		startEventGUIName = Lights On
