--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBDBBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBDBBlockIII+.cfg
@@ -166,6 +166,13 @@ PART
 		storageRange = 2.0
 	}
 
+	MODULE
+	{
+		name = ModuleInventoryPart
+		InventorySlots = 10
+		packedVolumeLimit = 250
+	}
+
 	//	============================================================================
 	//	Internals
 	//	============================================================================
