--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
@@ -110,6 +110,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 4
+		packedVolumeLimit = 100
+	}
+
+	MODULE
+	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitchNode
 		switcherDescription = Node
