--- a/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/CST/CSTCM.cfg
@@ -167,6 +167,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 14
+		packedVolumeLimit = 350
+	}
+
+	MODULE
+	{
 		name = ModuleRCSFX
 		stagingEnabled = True
 		thrusterTransformName = RCS
