--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaAftBayMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaAftBayMoroz.cfg
@@ -66,6 +66,13 @@ PART
 		toggleEditor = true
 		toggleFlight = true
 	}
+
+	MODULE
+	{
+		name = ModuleInventoryPart
+		InventorySlots = 2
+		packedVolumeLimit = 50
+	}
 	
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
