--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCockpitMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCockpitMoroz.cfg
@@ -195,6 +195,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 2
+		packedVolumeLimit = 50
+	}
+
+	MODULE
+	{
 		name = ModuleColorChanger
 		shaderProperty = _EmissiveColor
 		animRate = 0.8
