--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
@@ -112,6 +112,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 14
+		packedVolumeLimit = 350
+	}
+
+	MODULE
+	{
 		name = ModuleColorChanger
 		shaderProperty = _EmissiveColor
 		animRate = 0.8
