--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -452,6 +452,13 @@ PART
 		}
 	}
 
+	MODULE
+	{
+		name = ModuleInventoryPart
+		InventorySlots = 4
+		packedVolumeLimit = 100
+	}
+
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
 		name = ModuleConnectedLivingSpace
