--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
@@ -426,6 +426,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 4
+		packedVolumeLimit = 100
+	}
+
+	MODULE
+	{
 		name = ModuleRCSFX
 		stagingEnabled = False
 		thrusterTransformName = rcsTransform
