--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -123,6 +123,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 2
+		packedVolumeLimit = 50
+	}
+
+	MODULE
+	{
 		name = ModuleFuelTanks
 		volume = 600
 		type = SM-II
