--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2CommandModule.cfg
@@ -146,6 +146,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 6
+		packedVolumeLimit = 150
+	}
+
+	MODULE
+	{
 		name = ModuleToggleCrossfeed
 		crossfeedStatus = false
 		toggleEditor = true
