--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
@@ -431,6 +431,13 @@ PART
 		storageRange = 2.0
 	}
 
+	MODULE
+	{
+		name = ModuleInventoryPart
+		InventorySlots = 6
+		packedVolumeLimit = 150
+	}
+
 	//	============================================================================
 	//	Internals
 	//	============================================================================
