--- a/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCabinMoroz.cfg
+++ b/GameData/ROCapsules/PartConfigs/DynasoarMoroz/DynaCabinMoroz.cfg
@@ -85,6 +85,12 @@ PART
 	}
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 4
+		packedVolumeLimit = 100
+	}
+	MODULE
+	{
 		name = ModuleColorChanger
 		shaderProperty = _EmissiveColor
 		animRate = 0.8
