--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiSM.cfg
@@ -56,6 +56,13 @@ PART
 		}
 	}
 
+	MODULE
+	{
+		name = ModuleInventoryPart
+		InventorySlots = 6
+		packedVolumeLimit = 150
+	}
+
 	INTERNAL
 	{
 		name = crewCabinInternals
