--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiLCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiLCM.cfg
@@ -173,6 +173,13 @@ PART
 		packetCeiling = 5
 	}
 
+	MODULE
+	{
+		name = ModuleInventoryPart
+		InventorySlots = 4
+		packedVolumeLimit = 100
+	}
+
 	MODULE:NEEDS[ConnectedLivingSpace]
 	{
 		name = ModuleConnectedLivingSpace
