--- a/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
@@ -140,6 +140,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 12
+		packedVolumeLimit = 300
+	}
+
+	MODULE
+	{
 		name = ModuleAnimateGeneric
 		animationName = ORION_LIGHT
 		startEventGUIName = Lights On
