--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
@@ -107,6 +107,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleInventoryPart
+		InventorySlots = 6
+		packedVolumeLimit = 150
+	}
+
+	MODULE
+	{
 		name = ModuleFuelTanks
 		volume = 450
 		type = SM-II
