Add localizations for new parts

--- a/GameData/ROCapsules/Localization/en-us.cfg
+++ b/GameData/ROCapsules/Localization/en-us.cfg
@@ -178,7 +178,37 @@ Localization
 		//		ROC-LEMMESABDB
 		#rocLEMMESABDBTitle = Apollo LM Material Experiment Stowage Assembly
 		#rocLEMMESABDBDesc = Storage bay, containing astronaut EVA equipment, and cameras to record the first steps onto the moon. Place to the left of the LM ladder.
-		
+
+		//	============================================================================
+		//	BDB LEM Phase B
+		//	============================================================================
+		//		ROC-LEMAscentTaxiBDB
+		#rocLEMAscentTaxiBDBTitle = AES LM Taxi Ascent Stage
+		#rocLEMAscentTaxiBDBDesc = The LM Taxi Ascent Stage Cockpit provides accommodations for up to three crew to ride to the Moon's surface atop the LM Decent Stage, perform an extended surface stay, then return to orbit. During surface operations, the Taxi is shut down and put in a dormant state to save resources, while the crew operates out of a separately landed shelter. Includes radiators and deployable insulation for the dormancy period. Remember to have all crew members on board before launching. Due to low performance with 3 crewmembers, it is recommended to leave behind all equipment before launching.
+		//	============================================================================
+		//		ROC-LEMFoldingSNAP27BDB
+		#rocLEMFoldingSNAP27BDBTitle = SNAP-27 Series RTG
+		#rocLEMFoldingSNAP27BDBDesc = Folding SNAP-27 mount. Used for upgraded lunar missions that need to have keep-alive power and heat during the dormancy period of a long sortie.
+		//	============================================================================
+		//		ROC-LEMRackSNAP9BDB
+		#rocLEMRackSNAP9BDBTitle = Quad SNAP-9 Series RTG
+		#rocLEMRackSNAP9BDBDesc = Radial quad-mount version of the SNAP-9 RTG. Used for upgraded lunar missions that need to have keep-alive power and heat during the dormancy period of a long sortie.
+		//	============================================================================
+		//		ROC-LEMShelterBDB
+		#rocLEMShelterBDBTitle = AES LM Shelter
+		#rocLEMShelterBDBDesc = Longer surface stays require facilities and consumables beyond what can be carried in a single LM lander. This is a dedicated shelter module. Includes fuel cells, deployable insulation, and an expandable airlock - make sure your front leg does not have the "porch". Requires additional oxygen tanks to be added to the descent module to supply the crew and fuel cells.
+		//	============================================================================
+		//		ROC-LEMTruckPlatformBDB
+		#rocLEMTruckPlatformBDBTitle = AES LM Truck Payload Platform
+		#rocLEMTruckPlatformBDBDesc = This platform is intended to be mounted on top of a LM Descent Stage. Includes extending ramps for deploying a rover to the lunar surface. Rover design or parts not included.
+		//	============================================================================
+		//		ROC-LEMTruckRCS3BDB
+		#rocLEMTruckRCS3BDBTitle = AES LM Truck 3x RCS Cluster
+		#rocLEMTruckRCS3BDBDesc = Modified version of the standard CSM and LM RCS cluster, designed to be mounted on the LM-Truck to provide independent attitude control for autonomous landing.//	============================================================================
+		//		ROC-LEMTruckRCS4BDB
+		#rocLEMTruckRCS4BDBTitle = AES LM Truck 4x RCS Cluster
+		#rocLEMTruckRCS4BDBDesc = Modified version of the standard CSM and LM RCS cluster, designed to be mounted on the LM-Truck to provide independent attitude control for autonomous landing.
+
 		//	============================================================================
 		//	BDB ASTP
 		//	============================================================================
