--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMAscentTaxiBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMAscentTaxiBDB.cfg
@@ -29,9 +29,9 @@ PART
 	cost = 150
 	category = Pods
 	subcategory = 0
-	title = AES LM Taxi Ascent Stage
+	title = #rocLEMAscentTaxiBDBTitle	//AES LM Taxi Ascent Stage
 	manufacturer = #roMfrGrumman
-	description = The LM Taxi Ascent Stage Cockpit provides accommodations for up to three crew to ride to the Moon's surface atop the LM Decent Stage, perform an extended surface stay, then return to orbit. During surface operations, the Taxi is shut down and put in a dormant state to save resources, while the crew operates out of a separately landed shelter. Includes radiators and deployable insulation for the dormancy period. Remember to have all crew members on board before launching. Due to low performance with 3 crewmembers, it is recommended to leave behind all equipment before launching.
+	description = #rocLEMAscentTaxiBDBDesc
 
 	vesselType = Lander
 	stagingIcon = RCS_MODULE
