--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMFoldingSNAP27BDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMFoldingSNAP27BDB.cfg
@@ -25,9 +25,9 @@ PART
 	cost = 150
 	category = Electrical
 	subcategory = 0
-	title = SNAP-27 Series RTG
+	title = #rocLEMFoldingSNAP27BDBTitle	//SNAP-27 Series RTG
 	manufacturer = #roMfrGE
-	description = Fixed SNAP-27 mount. Used for upgraded lunar missions that need to have keep-alive power and heat during the dormancy period of a long sortie.
+	description = #rocLEMFoldingSNAP27BDBDesc
 
 	mass = 0.016265		//20 kg? - 3.735 kg Pu-238
 	dragModelType = default
