--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMRackSNAP9BDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMRackSNAP9BDB.cfg
@@ -24,9 +24,9 @@ PART
 	cost = 1500
 	category = Electrical
 	subcategory = 0
-	title = Quad SNAP-9 Series RTG
+	title = #rocLEMRackSNAP9BDBTitle	//Quad SNAP-9 Series RTG
 	manufacturer = #roMfrMM
-	description = Radial quad-mount version of the SNAP-9 RTG. Used for upgraded lunar missions that need to have keep-alive power and heat during the dormancy period of a long sortie. 
+	description = #rocLEMRackSNAP9BDBDesc
 
 	mass = 0.046 // (4x SNAP9 weight + some structure) 50 kg - 4 kg Pu-238
 	dragModelType = default
