--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMShelterBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMShelterBDB.cfg
@@ -33,9 +33,9 @@ PART
 	cost = 150
 	category = Pods
 	subcategory = 0
-	title = AES LM Shelter
+	title = #rocLEMShelterBDBTitle	//AES LM Shelter
 	manufacturer = #roMfrGrumman
-	description = Longer surface stays require facilities and consumables beyond what can be carried in a single LM lander. This is a dedicated shelter module. Includes fuel cells, deployable insulation, and an expandable airlock - make sure your front leg does not have the "porch". Requires additional oxygen tanks to be added to the descent module to supply the crew and fuel cells.
+	description = #rocLEMShelterBDBDesc
 
 	// --- standard part parameters ---
 	//	Shelter recommended configuration inert mass (including descent stage): 10586 lbs - 514 lbs crew equipment = 10072 lbs (4568.58 kg)
