--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMTruckPlatformBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMTruckPlatformBDB.cfg
@@ -19,9 +19,9 @@ PART
 	category = Structural
 	subcategory = 0
 
-	title = AES LM Truck Payload Platform
+	title = #rocLEMTruckPlatformBDBTitle	//AES LM Truck Payload Platform
 	manufacturer = #roMfrGrumman
-	description = This platform is intended to be mounted on top of a LM-Truck Descent Stage. Includes extending ramps for deploying a rover to the lunar surface. Rover design or parts not included.  
+	description = #rocLEMTruckPlatformBDBDesc
 
 	attachRules = 1,0,1,1,0
 	mass = 0.1
