--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMTruckRCS3BDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMTruckRCS3BDB.cfg
@@ -15,9 +15,9 @@ PART
 	cost = 600
 	category = Control
 	subcategory = 0
-	title = AES LM Truck 3x RCS Cluster
+	title = #rocLEMTruckRCS3BDBTitle	//AES LM Truck 3x RCS Cluster
 	manufacturer = #roMfrMarquardt
-	description = Modified version of the standard CSM and LM RCS cluster, designed to be mounted on the LM-Truck to provide independent attitude control for autonomous landing.
+	description = #rocLEMTruckRCS3BDBDesc
 
 	attachRules = 0,1,0,0,0
 	mass = 0.01143		//idk, 4/5ths the mass of 4x cluster
