--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMTruckRCS4BDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMTruckRCS4BDB.cfg
@@ -15,9 +15,9 @@ PART
 	cost = 750
 	category = Control
 	subcategory = 0
-	title = AES LM Truck 4x RCS Cluster
+	title = #rocLEMTruckRCS4BDBTitle	//AES LM Truck 4x RCS Cluster
 	manufacturer = #roMfrMarquardt
-	description = Modified version of the standard CSM and LM RCS cluster, designed to be mounted on the LM-Truck to provide independent attitude control for autonomous landing.
+	description = #rocLEMTruckRCS4BDBDesc
 
 	attachRules = 0,1,0,0,0
 	mass = 0.01429
