Add AES LM Phase B parts (#160)
Whatever, shipping without recolor. LM Taxi, Shelter and Truck parts, also fix some config errors on LM ascent stage

--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMAscentBDB.cfg
@@ -295,11 +295,11 @@ PART
 	//LM Ascent Module:
 	//	APS Propellant: 2199.40 L
 	//		AZ50: 1015.1 L
-	//		NTO: 1019.3 L
+	//		MON1: 1019.3 L
 	//		Helium: 33000 L (/200)
 	//	RCS Propellant: 220.27 L (RCS propellant loaded at 1.94:1 in expectation of crossfeed to APS)
 	//		AZ50: 87.3 L
-	//		NTO: 106.3 L
+	//		MON1: 106.3 L
 	//		Helium: 5333 L (/200)
 	//	LM Ascent LS: 132.85 L
 	//		Water (Cooling): 11.16 L
@@ -314,8 +314,8 @@ PART
 	//	LM Excess: 200 L (???)
 	//	LS Resources Mass (including food): 72.27 kg
 	//	LS Resources Mass (excluding food): 62.41 kg
-	//TOTAL TANK SIZE (NO LS): 2662.935 L
-	//TOTAL TANK SIZE (LS): 2862.935 L
+	//TOTAL TANK SIZE (NO LS): 2612.195 L
+	//TOTAL TANK SIZE (LS): 2812.195 L
 
 	//	================================================================================
 	//Tank Mass Compensation
@@ -375,7 +375,7 @@ PART
 	//	Thermo, Durability
 	//	============================================================================
 
-	mass = 1.53975		//1794.05 kg - 85.95 kg (batteries) - 226.4 kg (APS tank) - 20.97 kg (RCS tank) + 12.75 kg (LS tank) + 72.27 kg (LS resources) - 6 kg (Habitat Atmosphere) = 1539.75 kg
+	mass = 1.54207		//1794.05 kg - 85.95 kg (batteries) - 211.15 kg (APS tank) - 21.15 kg (RCS tank) + 72.27 kg (LS resources) - 6 kg (Habitat Atmosphere) = 1542.07 kg
 	crashTolerance = 8
 	breakingForce = 250
 	breakingTorque = 250
@@ -389,7 +389,7 @@ PART
 	skinTempTag = MLI
 	internalTempTag = Instruments
 	skinInsulationTag = True
-	paintEmissivityTag = 0.1	//partly painted
+	paintEmissivityTag = 0.2	//partly painted
 
 	//	============================================================================
 	//	Modules and Resources
@@ -525,8 +525,8 @@ PART
 	{
 		name = ModuleFuelTanks
 		type = SM-IV
-		volume = 2549.345
-		basemass = 1.53975
+		volume = 2612.195
+		basemass = 1.54207
 
 		//	Two batteries ~16.6 kWh (28 V @ 296 Ah each).
 
