Switch Gemini retro to global engine config

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetroMEC.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetroMEC.cfg
@@ -1,11 +1,10 @@
 PART
 {
-	name = ROC-GeminiRetroBDB
+	name = ROC-GeminiRetroMECBDB
 	module = Part
 	author = CobaltWolf, capkirk
 
 	RSSROConfig = True
-	RODeprecated = true
 
 	MODEL
 	{
@@ -58,85 +57,12 @@ PART
 
 	tags = gemini retro star-13 star 13
 
-	// Star 13E
-	// https://space.skyrocket.de/doc_eng/star-13.htm
-	// https://airandspace.si.edu/collection-objects/rocket-motor-solid-fuel-gemini-retro-also-designated-te-m-385-or-54-ks-2580/nasm_A19731447000
-	// https://space.skyrocket.de/doc_sdat/gemini.htm
-	// various sources claim the Isp is either 255 or 211.
+	engineType = Star-13E
 
 	MODULE
 	{
 		name = ModuleEnginesRF
 		thrustVectorTransformName = thrustTransform
-		EngineType = SolidBooster
-		allowShutdown = False
-		throttleLocked = True
-	}
-
-	MODULE
-	{
-		name = ModuleEngineConfigs
-		type = ModuleEngines
-		configuration = Star-13E
-		modded = false
-		origMass = 0.00647
-
-		CONFIG
-		{
-			name = Star-13E
-			minThrust = 2.78
-			maxThrust = 2.78
-			heatProduction = 100
-
-			PROPELLANT
-			{
-				name = CTPB
-				ratio = 1
-				DrawGauge = True
-			}
-
-			atmosphereCurve
-			{
-				key = 0 255
-				key = 1 211
-				key = 7 0.001
-			}
-
-			thrustCurve
-			{
-				key = 0.95462 1
-				key = 0.90925 1
-				key = 0.86387 1
-				key = 0.8185 1
-				key = 0.77312 1
-				key = 0.72775 1
-				key = 0.68237 1
-				key = 0.637 1
-				key = 0.59162 1
-				key = 0.54625 1
-				key = 0.50087 1
-				key = 0.4555 1
-				key = 0.41012 1
-				key = 0.36475 1
-				key = 0.31937 1
-				key = 0.274 1
-				key = 0.22862 1
-				key = 0.18325 1
-				key = 0.13787 1
-				key = 0.0925 1
-				key = 0.04712 1
-				key = 0.00175 1
-			}
-		}
-	}
-
-	//55.62 lbs (25.23 kg) propellant
-	MODULE
-	{
-		name = ModuleFuelTanks
-		volume = 14.25
-		type = CTPB
-		basemass = -1
 	}
 
 	MODULE
