--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/Waterfall_Support_GeminiBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/Waterfall_Support_GeminiBDB.cfg
@@ -137,7 +137,7 @@
     }
 }
 
-@PART[ROC-GeminiRetroBDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+@PART[ROC-GeminiRetroBDB|ROC-GeminiRetroMECBDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
 {
     ROWaterfall
     {
