--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2Nosecone.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2Block2Nosecone.cfg
@@ -16,9 +16,9 @@ PART
 	}
 
 	scale = 1
-	rescaleFactor = 1.0
+	rescaleFactor = 1.1072	//because it's not scaled the same as the LES cover for some reason
 
-	node_stack_bottom = 0.0, -0.275, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_bottom = 0.0, -0.04516, 0.0, 0.0, -1.0, 0.0, 1
 
 	CoMOffset = 0.0, 1.0, 0.0 
 	CoPOffset = 0.0, 0.0, 0.0
