Remove magnets from ports with accurate colliders

--- a/GameData/ROCapsules/PartConfigs/LEMBDB/ApolloDrogueDockPortBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/ApolloDrogueDockPortBDB.cfg
@@ -75,17 +75,17 @@ PART
 		nodeType = Apollo
 		gendered = True
 		genderFemale = True
-		acquireForce = 0.5
-		acquireMinFwdDot = 0.8
+		acquireForce = 0 //0.5
+		acquireMinFwdDot = 0.8 // 0.7
 		acquireminRollDot = -3.40282347E+38
-		acquireRange = 0.25
-		acquireTorque = 0.5
-		captureMaxRvel = 0.1
+		acquireRange = 0.25 // 0.5
+		acquireTorque = 0 // 0.5
+		captureMaxRvel = 0.1 // 0.3
 		captureMinFwdDot = 0.998
 		captureMinRollDot = -3.40282347E+38
-		captureRange = 0.05
-		minDistanceToReEngage = 0.25
-		undockEjectionForce = 0.1
+		captureRange = 0.05 // 0.06
+		minDistanceToReEngage = 0.25 // 1.0
+		undockEjectionForce = 0.1 // 10
 	}
 
 	MODULE:NEEDS[ConnectedLivingSpace]
