Apollo RCS Waterfall
Quick and dirty waterfall configs. Doesn't fit very well because transforms are bad but it looks ok from a distance.
resovles https://github.com/KSP-RO/ROCapsules/issues/172

--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
@@ -74,7 +74,7 @@ PART
 		stagingEnabled = True
 		thrusterTransformName = RCSthruster
 		thrusterPower = 0.445
-		runningEffectName = running
+		runningEffectName = control
 		
 		// MR 2.04:1 from ox/fuel masses
 		PROPELLANT
@@ -116,7 +116,7 @@ PART
 	
 	EFFECTS
 	{
-		running
+		control
 		{
 			AUDIO_MULTI_POOL
 			{
@@ -142,6 +142,6 @@ PART
 				speed = 1.0 1.0
 				localRotation = -90, 0, 0
 			}
-		}	
+		}
 	}
 }
