Assets and preliminary configs

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/AgenaPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/AgenaPort.cfg
@@ -96,6 +96,14 @@ PART
 
 	MODULE
 	{
+		name = ModuleToggleCrossfeed
+		crossfeedStatus = false
+		toggleEditor = false
+		toggleFlight = false
+	}
+
+	MODULE
+	{
 		name = ModuleAnimateGeneric
 		animationName = dockingPort_Lights
 		startEventGUIName = Lights On
