--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNosecone.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiNosecone.cfg
@@ -88,7 +88,15 @@ PART
 		startEventGUIName = Deploy Indexing Key
 		endEventGUIName = Retract Indexing Key
 	}
-	
+
+	MODULE
+	{
+		name = ModuleToggleCrossfeed
+		crossfeedStatus = false
+		toggleEditor = false
+		toggleFlight = false
+	}
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
