Separate Mercury chute and minor QoL fixes

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -72,7 +72,7 @@ PART
 	//		Antenna: 27 lbs
 	//		Antenna Misc: 8 lbs
 	//	================================================================================
-	//RCS: 280 lbs
+	//RCS: 123 lbs
 	//	Structure: 36 lbs
 	//		Parachute Struct: 36 lbs
 	//	Propulsion: 52 lbs
@@ -80,9 +80,12 @@ PART
 	//		RCS Mounting: 11 lbs
 	//		RCS Insulation: 10 lbs
 	//		RCS Heat Sink: 10 lbs
-	//	Other: 192 lbs
-	//		Chutes: 157 lbs
+	//	Other: 35 lbs
 	//		Recovery Sys: 35 lbs
+	//	================================================================================
+	//Parachute: 157 lbs
+	//	Other: 157 lbs
+	//		Chutes: 157 lbs
 	//	================================================================================
 	//TOTAL DRY MASS: 2389 lbs (2393 - 4 lbs LiOH)
 	//	Structure: 377 lbs
@@ -142,8 +145,11 @@ PART
 	//	Nose Cap: 72 lbs (32.66 kg)
 	//		Dry Mass: 72 lbs
 	//	================================================================================
-	//	RCS: 280 lbs (127.01 kg)
-	//		Dry Mass: 280 lbs
+	//	RCS: 123 lbs (55.79 kg)
+	//		Dry Mass: 123 lbs
+	//	================================================================================
+	//	Parachute: 157 lbs (71.21 kg)
+	//		Dry Mass: 157 lbs
 	//	================================================================================
 	//INERT MASS: 2429 lbs (1101.78 kg)
 
@@ -236,7 +242,7 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	vesselType = Ship
-	stagingIcon = COMMAND_POD
+	stagingIcon = RCS_MODULE
 	CrewCapacity = 1
 	bulkheadProfiles = size0, size1
 
