--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/TU_Support_Mercury.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/TU_Support_Mercury.cfg
@@ -449,7 +449,7 @@ KSP_TEXTURE_SET:NEEDS[TexturesUnlimited]
 	%MODULE[SSTURecolorGUI] {}
 }
 
-@PART[ROC-MercuryAirbrakeBDB|ROC-MercuryRCSBDB|ROC-MercuryNoseCapBDB]:NEEDS[TexturesUnlimited]
+@PART[ROC-MercuryAirbrakeBDB|ROC-MercuryRCSBDB|ROC-MercuryRCS2BDB|ROC-MercuryNoseCapBDB]:NEEDS[TexturesUnlimited]
 {
 	MODULE
 	{
