--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/Waterfall_Support_MercuryBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/Waterfall_Support_MercuryBDB.cfg
@@ -11,7 +11,7 @@
     }
 }
 
-@PART[ROC-MercuryRCSBDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
+@PART[ROC-MercuryRCSBDB|ROC-MercuryRCS2BDB]:BEFORE[ROWaterfall]:NEEDS[Waterfall]
 {
     ROWaterfall
     {
