--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS2.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS2.cfg
@@ -1,11 +1,10 @@
 PART
 {
-	name = ROC-MercuryRCSBDB
+	name = ROC-MercuryRCS2BDB
 	module = Part
 	author = CobaltWolf, capkirk
 
 	RSSROConfig = true
-	RODeprecated = true
 
 	MODEL
 	{
@@ -13,11 +12,11 @@ PART
 		rotation = 0, 180, 0
 	}
 
-	MODEL
-	{
-		model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Parachute
-		rotation = 0, 180, 0
-	}
+	//MODEL
+	//{
+	//	model = ROCapsules/Assets/BDB/Mercury/bluedog_Mercury_Parachute
+	//	rotation = 0, 180, 0
+	//}
 
 	rescaleFactor = 1.512
 	node_stack_top = 0.0, 0.27984, 0.0, 0.0, 1.0, 0.0, 0
@@ -42,7 +41,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = This part contains four way RCS thrusters to help orient the Mercury capsule and the main parachute.
 	attachRules = 1,0,1,1,0
-	mass = 0.1104		//127.01 kg, subtract 16.61 kgs added by realchute?
+	mass = 0.05579
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -52,7 +51,7 @@ PART
 	breakingTorque = 50
 	fuelCrossFeed = True
 	bodyLiftMultiplier = 0
-	bulkheadProfiles = size0
+	stagingIcon = RCS_MODULE
 
 	//Thermal Stuff
 	//Skin made of Rene 41 shingles (max temp 1144)
@@ -67,7 +66,7 @@ PART
 	internalTempTag = Instruments
 	skinInsulationTag = True
 
-	tags = mercury rcs parachute control
+	tags = mercury rcs control
 
 	EFFECTS
 	{
@@ -98,70 +97,6 @@ PART
 				localRotation = -90, 0, 0
 			}
 		}
-	}
-
-	MODULE:NEEDS[!RealChute]
-	{
-		name = ModuleParachute
-		semiDeployedAnimation = semi_deploy
-		fullyDeployedAnimation = full_deploy
-		shieldedCanDeploy = true
-		invertCanopy = false
-		autoCutSpeed = 0.5
-		capName = Cap
-		canopyName = canopy
-		stowedDrag = 0.22
-		semiDeployedDrag = 1
-		fullyDeployedDrag = 300
-		minAirPressureToOpen = 0.04
-		clampMinAirPressure = 0.01
-		deployAltitude = 1000
-		deploymentSpeed = 0.12
-		semiDeploymentSpeed = 1 //0.5
-		chuteMaxTemp = 650
-	}
-
-	MODULE:NEEDS[RealChute]
-	{
-		name = RealChuteModule
-		caseMass = 0.1104
-		mustGoDown = True
-		spareChutes = 1
-		cutSpeed = 0.5
-		invertCanopy = false
-		reverseOrientation = true
-
-		PARACHUTE
-		{
-			parachuteName = canopy
-			capName = Cap
-			preDeploymentAnimation = semi_deploy
-			deploymentAnimation = full_deploy
-			material = Nylon
-			minIsPressure = False
-			minPressure = 0.01
-			preDeployedDiameter = 5
-			preDeploymentSpeed = 2
-			minDeployment = 3000
-			deployedDiameter = 19.2
-			deploymentSpeed = 6
-			deploymentAlt = 1000
-			cutAlt = 0
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleDragModifier
-		dragCubeName = SEMIDEPLOYED
-		dragModifier = 4 //1.25
-	}
-
-	MODULE
-	{
-		name = ModuleDragModifier
-		dragCubeName = DEPLOYED
-		dragModifier = 45 //12
 	}
 
 	MODULE
@@ -226,7 +161,8 @@ PART
 		name = ModuleDecouple
 		ejectionForce = 20
 		explosiveNodeID = top
-		staged = true
+		staged = false
+		menuName = Jettison Nose Unit
 	}
 
 	// MODULE
@@ -299,29 +235,10 @@ PART
 	}
 }
 
-@PART[ROC-MercuryRCSBDB]:AFTER[zzzRealismOverhaul]
+@PART[ROC-MercuryRCS2BDB]:AFTER[zzzRealismOverhaul]
 {
-	// RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
-	// Get back our historical numbers
-	@MODULE[RealChuteModule]
-	{
-		@PARACHUTE
-		{
-			@minDeployment = 3000
-			@deploymentAlt = 1000
-		}
-	}
-	
 	@MODULE[ModuleToggleCrossfeed]
 	{
 		%crossfeedStatus = true
 	}
-}
-
-//	================================================================================
-//	Override RO global settings to get our temperatures back
-//	================================================================================
-@PART[ROC-MercuryRCSBDB]:AFTER[RealismOverhaul]
-{
-	@skinMaxTemp = 1144
 }
