--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryParachute.cfg
@@ -29,7 +29,7 @@ PART
 	cost = 1
 	category = Utility
 	subcategory = 0
-	title = Mercury-MASD Main Parachute
+	title = Mercury M-ASD Main Parachute
 	manufacturer = McDonnell Aircraft
 	description =  Main parachute for the Mercury capsule. Attach to the node in the recovery section.
 	attachRules = 1,0,1,1,0
