Add lunar flying vehicle and improve LRV

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMRover.cfg
@@ -34,8 +34,8 @@ PART
 	category = Utility
 	subcategory = 0
 	title = Apollo Lunar Roving Vehicle (LRV)
-	manufacturer = Boeing Co. & General Motors
-	description = This 4-wheeled buggy can be attached to the side of the Apollo LM descent stage, allowing extended exploration on the surface of the Moon.
+	manufacturer = #roMfrBoeing
+	description = This 4-wheeled buggy can be attached to the side of the Apollo LM descent stage, allowing extended exploration on the surface of the Moon. <#ef7b06> AUTHOR'S NOTE: Due to its unstable nature, you should always quicksave and quickload before attempting to board the LRV.</color>
 	tags = apollo, moon, lunar, crew, armstrong, aldrin, cm, csm, saturn, v, lem, lm, rover
 
 	vesselType = Rover
@@ -50,8 +50,7 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	fuelCrossFeed = False
-	
-	
+
 	//Aluminum?
 	skinTempTag = Aluminum
 	internalTempTag = Instruments
@@ -72,9 +71,16 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 50.0
+		ejectionForce = 5.0
 		explosiveNodeID = top
 		menuName = Deploy LRV
+	}
+
+	MODULE
+	{
+		name = ModuleInventoryPart
+		InventorySlots = 4
+		packedVolumeLimit = 100
 	}
 
 	MODULE
