--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LEMDescentBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LEMDescentBDB.cfg
@@ -328,7 +328,7 @@ PART
 
 	node_stack_top = 0.0, 0.58759, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.10226, 0.0, 0, -1, 0, 1
-	//node_stack_bottom2 = 0.0, -0.37979, 0.0, 0, -1, 0, 1
+	node_stack_lrv = -0.8878, 0.0, 0.8878, -1, 0, 1, 1
 
 	stackSymmetry = 3
 
@@ -431,6 +431,17 @@ PART
 		{
 			name = J Class
 			transform = J_Class
+			MODULE
+			{
+				IDENTIFIER
+				{
+					name = ModuleInventoryPart
+				}
+				DATA
+				{
+					packedVolumeLimit = 2500
+				}
+			}
 		}
 	}
 
@@ -473,6 +484,13 @@ PART
 	{
 		name = FlagDecal
 		textureQuadName = flagTransform2
+	}
+
+	MODULE
+	{
+		name = ModuleInventoryPart
+		InventorySlots = 12
+		packedVolumeLimit = 3750	//~1250 liters of space in each quarter bay. 1 bay for avionics and helium tanks, other 3 for cargo?
 	}
 
 	MODULE
