--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LFV/LEMLFV.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LFV/LEMLFV.cfg
@@ -288,6 +288,19 @@ PART
 			ullage = False	//ullage screens
 			pressureFed = True
 			ignitions = 0	//R-4D derived, basically infinite?
+			useThrottleIspCurve = true
+
+			throttleIspCurve
+			{
+				key = 0.00 0.04169 0 0
+				key = 0.15 0.04169 0 1
+				key = 1.0 1.0 1 0
+			}
+			throttleIspCurveAtmStrength 
+			{
+				key = 0.0 0.1592
+				key = 1.0 1.0
+			}
 
 			IGNITOR_RESOURCE
 			{
@@ -322,7 +335,7 @@ PART
 			atmosphereCurve
 			{
 				key = 0 295
-				key = 1 167
+				key = 0.87 1
 			}
 
 			//Copied from R-4D-11, this is just a modified R-4D
@@ -393,7 +406,7 @@ PART
 		atmosphereCurve
 		{
 			key = 0 263
-			key = 1 100
+			key = 1 5
 		}
 	}
 
