Stop Gemini surviving w/o heat shield

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -352,6 +352,8 @@ PART
 	skinTempTag = Inconel
 	internalTempTag = Instruments
 	skinInsulationTag = True
+	paintEmissivityTag = 0.90	//high emissivity coating
+	skinTempOverride = 1750		//Raising this until we find a way to deal with excess heat flux
 
 	tags = capsule pod gemini
 
@@ -375,7 +377,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0.0, 0.0, 0.08		//Gemini reentered "upside-down" to protect crew hatches
+		DescentModeCoM = 0.0, 0.0, 0.072		//Gemini reentered "upside-down" to protect crew hatches
 	}
 
 	MODULE
@@ -760,12 +762,4 @@ PART
 			@rate -= 0.0514 //Remove Antenna idle power draw. Assuming two TL4 Antennas using 25.7 W idle
 		}
 	}
-}
-
-//	================================================================================
-//	Override RO global settings to get our temperatures back
-//	================================================================================
-@PART[ROC-GeminiCMBDB]:AFTER[RealismOverhaul_Materials]
-{
-	@skinMaxTemp = 2000		//Raising this until we can find a better way to deal with excess heat flux
 }
