--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -238,6 +238,7 @@ PART
 	skinTempTag = Inconel
 	internalTempTag = Instruments
 	skinInsulationTag = True
+	paintEmissivityTag = 0.90	//high emissivity coating
 
 	breakingForce = 250
 	breakingTorque = 250
@@ -625,14 +626,6 @@ PART
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
 	}
-}
-
-//	================================================================================
-//	Override RO global settings to get our temperatures back
-//	================================================================================
-@PART[ROC-MercuryCMBDB]:AFTER[RealismOverhaul]
-{
-	@skinMaxTemp = 1144
 }
 
 //	================================================================================
