--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
@@ -172,7 +172,15 @@ PART
 	}
 
 	MODULE
-		{
+	{
+		name = ModuleFuelTanks
+		volume = 0
+		basemass = 0.02150
+		type = SM-II	//Mercury-era
+	}
+
+	MODULE
+	{
 		name = ModuleB9PartSwitch
 		moduleID = meshSwitchStyle
 		switcherDescription = Style
@@ -184,12 +192,34 @@ PART
 		{
 			name = Basic
 			transform = Basic
+			addedMass = 0
+			addedCost = 0
+			MODULE
+			{
+				IDENTIFIER { name = ModuleFuelTanks }
+				DATA
+				{
+					volume = 0
+					basemass = 0.02150
+				}
+			}
 		}
 
 		SUBTYPE
 		{
 			name = Enhanced
 			transform = Enhanced
+			addedMass = 0.00448
+			addedCost = 0.5
+			MODULE
+			{
+				IDENTIFIER { name = ModuleFuelTanks }
+				DATA
+				{
+					volume = 41.5
+					basemass = 0.02598
+				}
+			}
 		}
 	}
 }
