disable B9PS integration

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetropack.cfg
@@ -171,13 +171,14 @@ PART
 		toggleFlight = true
 	}
 
-	MODULE
-	{
-		name = ModuleFuelTanks
-		volume = 0
-		basemass = 0.02150
-		type = SM-II	//Mercury-era
-	}
+	//disabled until B9PS integration is less buggy
+	//MODULE
+	//{
+	//	name = ModuleFuelTanks
+	//	volume = 0
+	//	basemass = 0.02150
+	//	type = SM-II	//Mercury-era
+	//}
 
 	MODULE
 	{
@@ -192,34 +193,36 @@ PART
 		{
 			name = Basic
 			transform = Basic
-			addedMass = 0
-			addedCost = 0
-			MODULE
-			{
-				IDENTIFIER { name = ModuleFuelTanks }
-				DATA
-				{
-					volume = 0
-					basemass = 0.02150
-				}
-			}
+			//disabled until B9PS integration is less buggy
+			//addedMass = 0
+			//addedCost = 0
+			//MODULE
+			//{
+			//	IDENTIFIER { name = ModuleFuelTanks }
+			//	DATA
+			//	{
+			//		volume = 0
+			//		basemass = 0.02150
+			//	}
+			//}
 		}
 
 		SUBTYPE
 		{
 			name = Enhanced
 			transform = Enhanced
-			addedMass = 0.00448
-			addedCost = 0.5
-			MODULE
-			{
-				IDENTIFIER { name = ModuleFuelTanks }
-				DATA
-				{
-					volume = 41.5
-					basemass = 0.02598
-				}
-			}
+			//disabled until B9PS integration is less buggy
+			//addedMass = 0.00448
+			//addedCost = 0.5
+			//MODULE
+			//{
+			//	IDENTIFIER { name = ModuleFuelTanks }
+			//	DATA
+			//	{
+			//		volume = 41.5
+			//		basemass = 0.02598
+			//	}
+			//}
 		}
 	}
 }
