Minor Apollo D2 fixes

--- a/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo D2/D2RCS.cfg
@@ -71,6 +71,13 @@ PART
 		thrusterPower = 0.445
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running
+		//Skirt RCS does attitude control, we just need roll
+		enableX = true
+		enableY = true
+		enableZ = true
+		enableRoll = true
+		enablePitch = false
+		enableYaw = false
 		PROPELLANT	//1.78 O/F based on fuel load?
 		{
 			name = MMH
