Cargo part configs

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
@@ -5,6 +5,7 @@ PART
 	author = CobaltWolf, capkirk
 
 	RSSROConfig = True
+	ROCargoConfig = True
 
 	//	============================================================================
 	//	Model and Dimensions
@@ -76,5 +77,11 @@ PART
 		area = 8.05
 		level = 3
 		type = tracking
+	}
+
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 240
 	}
 }
