--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloEVALightBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloEVALightBDB.cfg
@@ -5,6 +5,7 @@ PART
 	author = CobaltWolf, capkirk123
 
 	RSSROConfig = True
+	
 
 	//	============================================================================
 	//	Model and Dimensions
@@ -69,6 +70,12 @@ PART
 		endEventGUIName = #roLightOff	//Lights Off
 		actionGUIName = #roLightToggle	//Toggle Lights
 		defaultActionGroup = Light
+	}
+
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 8
 	}
 
 	//	============================================================================
