--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetroMEC.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetroMEC.cfg
@@ -5,6 +5,7 @@ PART
 	author = CobaltWolf, capkirk
 
 	RSSROConfig = True
+	ROCargoConfig = True
 
 	MODEL
 	{
@@ -73,5 +74,11 @@ PART
 		maxDistance = 50
 		falloff = 1.8
 		thrustTransformName = thrustTransform
+	}
+
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 40
 	}
 }
