--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMFoldingSNAP27BDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMFoldingSNAP27BDB.cfg
@@ -4,6 +4,7 @@ PART
 	name = ROC-LEMFoldingSNAP27BDB
 	module = Part
 	author = CobaltWolf
+	ROCargoConfig = True
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Apollo/bluedog_LM_RTG_Folding
@@ -86,6 +87,12 @@ PART
 		endEventGUIName = Retract Arm
 		actionGUIName = Toggle Arm
 		allowAnimationWhileShielded = False
+	}
+
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 166
 	}
 
 	RESOURCE
