--- a/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMRackSNAP9BDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEMBDB/LMPhaseB/LEMRackSNAP9BDB.cfg
@@ -3,6 +3,7 @@ PART
 	name = ROC-LEMRackSNAP9BDB
 	module = Part
 	author = CobaltWolf
+	ROCargoConfig = True
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/Apollo/bluedog_LM_RTG_Rack
@@ -76,6 +77,11 @@ PART
 		}
 	}
 
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 324
+	}
 
 	RESOURCE
 	{
