--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryPosigrade.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryPosigrade.cfg
@@ -6,6 +6,7 @@ PART
 	author = CobaltWolf
 
 	RSSROConfig = true
+	ROCargoConfig = True
 
 	MODEL
 	{
@@ -107,6 +108,12 @@ PART
 				key = 1 85 //https://www.sciencedirect.com/science/article/pii/S1000936121003319
 			}
 		}
+	}
+
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 2
 	}
 
 	PLUME
