--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
@@ -6,6 +6,7 @@ PART
 	author = CobaltWolf, capkirk
 
 	RSSROConfig = true
+	ROCargoConfig = True
 
 	MODEL
 	{
@@ -109,6 +110,12 @@ PART
 		jettisonedObjectMass = 0.01
 		jettisonForce = 0
 		jettisonDirection = 0 0 1
+	}
+
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 30
 	}
 
 	PLUME
