--- a/GameData/ROCapsules/PartConfigs/Orion/OrionSolar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionSolar.cfg
@@ -3,8 +3,9 @@ PART
 	name = ROC-OrionSolar
 	module = Part
 	author = DECQ
-	
+
 	RSSROConfig = True
+	ROCargoConfig = True
 
 	MODEL
 	{
@@ -50,5 +51,12 @@ PART
 		chargeRate = 2.75
 		retractable = false
 	}
+
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 390
+	}
+
 }
 
