Use FASA IVA for Mercury
resolves https://github.com/KSP-RO/ROCapsules/issues/102

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -317,7 +317,9 @@ PART
 	
 	INTERNAL
 	{
-		name = Hermes_Crew_A_Interior
+		name = ROC-FASAMercuryInt
+		offset = 0.0, 0.0, 0.60
+		scale = 1.5, 1.5, 1.5
 	}
 
 	MODULE
