Improve Apollo internals
resolves https://github.com/KSP-RO/ROCapsules/issues/183

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBDBBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBDBBlockIII+.cfg
@@ -71,7 +71,8 @@ PART
 	
 	INTERNAL
 	{
-		name = ApolloCM_Internal
+		name = ROC-ApolloCMBIII_Internal
+		offset = 0.0, 0.0, 0.35
 	}
 	
 	//	============================================================================
