--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/Internal_Apollo.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/Internal_Apollo.cfg
@@ -3,7 +3,7 @@ INTERNAL
 	name = ApolloCM_Internal
 	MODEL
 	{
-		model = ROCapsules/Assets/DECQ/Apollo/Internal/Apollo_IVA
+		model = ROCapsules/Assets/DECQ/Apollo/Internal/APOLLO_IVA_Real
 		rotation = 0, 0, 180
 		scale = 1, 1, 1
 	}
@@ -11,18 +11,19 @@ INTERNAL
 	{
 		name = InternalSeat
 		seatTransformName = seat1
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = seat2
+		allowCrewHelmet = true
 	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = seat3
-		allowCrewHelmet = false
+		allowCrewHelmet = true
 	}
 	MODULE
 	{
