--- a/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
+++ b/GameData/ROCapsules/PartConfigs/ApolloBDB/ApolloCMBDB.cfg
@@ -339,6 +339,7 @@ PART
 	INTERNAL
 	{
 		name = ApolloCM_Internal
+		offset = 0.0, 0.0, 0.35
 	}
 	
 	//	============================================================================
