Clone, not patch

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/Internal_ApolloBIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/Internal_ApolloBIII.cfg
@@ -1,4 +1,4 @@
-@INTERNAL[ApolloCM_Internal]:FOR[ROCapsules]
++INTERNAL[ApolloCM_Internal]:FOR[ROCapsules]
 {
 	@name = ROC-ApolloCMBIII_Internal
 	
