Update GeminiLCM.cfg to fix antenna power subtraction applying to the regular Gemini capsule

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiLCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiLCM.cfg
@@ -382,7 +382,7 @@ PART
 //	================================================================================
 //	Reduce power draw to compensate for RA antennas
 //	================================================================================
-@PART[ROC-GeminiCMBDB]:NEEDS[RealAntennas]
+@PART[ROC-GeminiLCMBDB]:NEEDS[RealAntennas]
 {
 	@MODULE[ModuleCommand]
 	{
