--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -353,13 +353,34 @@ PART
 	internalTempTag = Instruments
 	skinInsulationTag = True
 	paintEmissivityTag = 0.90	//high emissivity coating
-	skinTempOverride = 1750		//Raising this until we find a way to deal with excess heat flux
 
 	tags = capsule pod gemini
 
 	INTERNAL
 	{
 		name = ROC-GeminiBDB-Internal
+	}
+
+	//Add a small amount of ablator to the Mercury skin to stop it from overheating due to random occlusion bugs
+	//Theoretically the occlusion bugs could be fixed, but drag cubes are a goddamn insanity rune
+	MODULE
+	{
+		name = ModuleAblator
+		ablativeResource = Ablator
+		outputResource = CharredAblator
+		outputMult = 0	//Don't actually outpuy charred ablator, doesn't matter that much with an amount this small
+		lossExp = -6000
+		lossConst = 1.1	//Buffed to keep temp below 1255 K
+		pyrolysisLossFactor = 7800
+		ablationTempThresh = 750
+		reentryConductivity = 0.0065
+		infoTemp = 1255
+	}
+	RESOURCE
+	{
+		name = Ablator
+		maxAmount = 10
+		amount = 10
 	}
 
 	MODULE
