--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -59,6 +59,8 @@ PART
 	//	================================================================================
 	//HS: 531 lbs
 	//	(Autoconfig tool assigns 197 lbs ablator, 157 lbs struct, for 354 lbs total)
+	//	(However, Mercury tends to run out of ablator, so add a little more)
+	//	(Going with 225 lbs ablator, 129 lbs structure, for 354 lbs total)
 	//	TPS: 354 lbs
 	//		Insulation: 46 lbs (dividing this up so HS mass agrees with autoconfig mass)
 	//		HS: 308 lbs
@@ -216,7 +218,7 @@ PART
 	description = The first American spacecraft. Carrying a single astronaut, it can be launched suborbital on a Redstone or into orbit on Atlas LV3B.
 	attachRules = 1,0,1,1,0
 	
-	mass = 0.61437	//693.10 kg - 5.13 kg (propellant tanks) - 87.48 kg (batteries) + 15.88 kg (LS resources) and 2 kg for trim (something adds 2 kg that I can't track down)
+	mass = 0.60937	//693.10 kg - 5.13 kg (propellant tanks) - 87.48 kg (batteries) + 15.88 kg (LS resources) - 5 kg (ablator) and - 2 kg for trim (something adds 2 kg that I can't track down)
 	//Subtract mass of propellant tanks and battery from base mass
 	//Life support mass will be subtracted when LS resources are patched
 	
@@ -250,6 +252,28 @@ PART
 	fuelCrossFeed = true
 
 	tags = mercury crew pod CM
+
+	//Add a small amount of ablator to the Mercury skin to stop it from overheating due to random occlusion bugs
+	//Theoretically the occlusion bugs could be fixed, but drag cubes are a goddamn insanity rune
+	MODULE
+	{
+		name = ModuleAblator
+		ablativeResource = Ablator
+		outputResource = CharredAblator
+		outputMult = 0	//Don't actually outpuy charred ablator, doesn't matter that much with an amount this small
+		lossExp = -6000
+		lossConst = 1.1	//Buffed to keep temp below 1255 K
+		pyrolysisLossFactor = 7800
+		ablationTempThresh = 750
+		reentryConductivity = 0.0065
+		infoTemp = 1255
+	}
+	RESOURCE
+	{
+		name = Ablator
+		maxAmount = 5
+		amount = 5
+	}
 
 	EFFECTS
 	{
