--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryHS.cfg
@@ -31,7 +31,7 @@ PART
 	manufacturer = McDonnell Aircraft
 	description = Small 1.89m heatshield for the Mercury capsule. Place underneath, before adding the retropack. Does not include a fairing. Comes with a built in airbag for a nice comfy landing.
 	attachRules = 1,0,1,0,0
-	mass = 0.15156	//240.86 - 89.3 kg ablator
+	mass = 0.13880	//240.86 - 102.06 kg ablator
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -64,6 +64,20 @@ PART
 	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter = 1.89
 	heatShieldTag = Mercury
-	resetHeatShieldAblator = true
+	resetHeatShieldAblator = false
 	resetHeatShieldMass = false
+
+	//Assign our own amount of Ablator, because the default amount tends to run out
+	RESOURCE
+	{
+		name = Ablator
+		maxAmount = 102.06	//~225 lbs
+		amount = 102.06
+	}
+	RESOURCE
+	{
+		name = CharredAblator
+		maxAmount = 102.06
+		amount = 0
+	}
 }
