Gemini CM mass compensation

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -331,7 +331,7 @@ PART
 	title = #rocGeminiCMBDBTitle	//Gemini Cabin
 	manufacturer = #roMfrMcDonnell
 	description = #rocGeminiCMBDBDesc
-	mass = 1.37586	//1412.01 kg - 26 kg (Batteries) - 18 kg (Antenna) - 3 kg (Habitat Atmosphere) - 20 kg (Other?) + 15.42 kg (Life Support Resources. LiOH included in inert mass)
+	mass = 1.36586	//1412.01 kg - 26 kg (Batteries) - 18 kg (Antenna) - 3 kg (Habitat Atmosphere) - 20 kg (Other?) + 15.42 kg (Life Support Resources. LiOH included in inert mass) - 10 kg (Ablator)
 	//1427.43 incl. LS mass compensation
 	dragModelType = default
 	maximum_drag = 0.20
