Switch Mercury Retro to MEC, adjust CoM

--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRetro.cfg
@@ -44,6 +44,8 @@ PART
 
 	tags = shepherd hermes solid booster decent retro motor engine mercury
 
+	engineType = TEM316
+
 	MODULE
 	{
 		name = ModuleEnginesRF
@@ -58,46 +60,6 @@ PART
 		engineAccelerationSpeed = 8.0
 		allowShutdown = False
 		fxOffset = 0, 0, 0.0
-	}
-
-	//Source: Solid rocket propulsion technology for de-orbiting spacecraft
-	//https://www.sciencedirect.com/science/article/pii/S1000936121003319
-	MODULE
-	{
-		name = ModuleEngineConfigs
-		modded = false
-		configuration = MercuryRetro
-		CONFIG
-		{
-			name = MercuryRetro
-			minThrust = 5.1	//nominal thrust 5.1 kN
-			maxThrust = 5.1
-			heatProduction = 2
-
-			powerEffectName = Solid-Upper
-
-			PROPELLANT
-			{
-				name = PSPC
-				ratio = 1
-				DrawGauge = True
-			}
-			atmosphereCurve
-			{
-				key = 0 206
-				key = 1 85
-			}
-			chamberNominalTemp	 = 1400
-			maxEngineTemp = 1740
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleFuelTanks
-		type = PSPC
-		volume = 12.57		//48.25 lbs propellant
-		basemass = -1
 	}
 
 	MODULE
