Switch Vostok SM to MEC

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
@@ -60,6 +60,9 @@ PART
 	skinTempTag = Aluminum
 	internalTempTag = Instruments
 
+	engineType = S5_4
+	ignoreMass = True	//Obviously, this contains a lot more than just the engine. Don't use engine weight
+
 	//	============================================================================
 	//	Animations and Textures
 	//	============================================================================
@@ -152,39 +155,6 @@ PART
 		maxDistance = 30
 		falloff = 1.7
 		thrustTransformName = thrustTransform
-	}
-
-	MODULE
-	{
-		name = ModuleEngineConfigs
-		type = ModuleEngines
-		configuration = S5.4
-		modded = false
-
-		CONFIG
-		{
-			name = S5.4
-			minThrust = 15.83
-			maxThrust = 15.83
-			heatProduction = 100
-			ignitions = 1	//only 1 start provided
-			PROPELLANT
-			{
-				name = AK20
-				ratio = 0.6360
-				DrawGauge = True
-			}
-			PROPELLANT
-			{
-				name = Tonka250
-				ratio = 0.3640
-			}
-			atmosphereCurve
-			{
-				key = 0 266
-				key = 1 112
-			}
-		}
 	}
 
 	//Vostok had two RCS systems. Deorbit orientation thrusters ran off main engine gas generator
@@ -321,6 +291,15 @@ PART
 	}
 }
 
+//	================================================================================
+//	Stop MEC from overriding our description
+//	================================================================================
+@PART[ROC-VostokService]:AFTER[RealismOverhaulEngines]
+{
+	%title = Vostok/Voskhod Service Module
+	%manufacturer = #roMfrOKB1
+	%description = A service module with batteries a simple engine AK20/Tonka250 engine that has only 1 ignition. This is the same service module that you use for Vostok, Voskhod, and Zenit. Attach the Decoupler to the Descent Module first and attach this to the bottom of the Descent Module.
+}
 //	================================================================================
 //	Configure RealAntennas
 //	================================================================================
