Fix typos in Vostok SM

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
@@ -296,9 +296,9 @@ PART
 //	================================================================================
 @PART[ROC-VostokService]:AFTER[RealismOverhaulEngines]
 {
-	%title = Vostok/Voskhod Service Module
+	%title = Vostok/Voskhod/Zenit Service Module
 	%manufacturer = #roMfrOKB1
-	%description = A service module with batteries a simple engine AK20/Tonka250 engine that has only 1 ignition. This is the same service module that you use for Vostok, Voskhod, and Zenit. Attach the Decoupler to the Descent Module first and attach this to the bottom of the Descent Module.
+	%description = A service module with batteries a simple de-orbit engine that has only 1 ignition. This is the same service module that you use for Vostok, Voskhod, and Zenit. Attach the Decoupler to the Descent Module first and attach this to the bottom of the Descent Module.
 }
 //	================================================================================
 //	Configure RealAntennas
