Add a small amount of ablator to Mercury and Gemini CMs to deal with occlusion issues (#192)
* Fuck

* Gemini CM mass compensation

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiCM.cfg
@@ -331,7 +331,7 @@ PART
 	title = #rocGeminiCMBDBTitle	//Gemini Cabin
 	manufacturer = #roMfrMcDonnell
 	description = #rocGeminiCMBDBDesc
-	mass = 1.37586	//1412.01 kg - 26 kg (Batteries) - 18 kg (Antenna) - 3 kg (Habitat Atmosphere) - 20 kg (Other?) + 15.42 kg (Life Support Resources. LiOH included in inert mass)
+	mass = 1.36586	//1412.01 kg - 26 kg (Batteries) - 18 kg (Antenna) - 3 kg (Habitat Atmosphere) - 20 kg (Other?) + 15.42 kg (Life Support Resources. LiOH included in inert mass) - 10 kg (Ablator)
 	//1427.43 incl. LS mass compensation
 	dragModelType = default
 	maximum_drag = 0.20
@@ -353,13 +353,34 @@ PART
 	internalTempTag = Instruments
 	skinInsulationTag = True
 	paintEmissivityTag = 0.90	//high emissivity coating
-	skinTempOverride = 1750		//Raising this until we find a way to deal with excess heat flux
 
 	tags = capsule pod gemini
 
 	INTERNAL
 	{
 		name = ROC-GeminiBDB-Internal
+	}
+
+	//Add a small amount of ablator to the Mercury skin to stop it from overheating due to random occlusion bugs
+	//Theoretically the occlusion bugs could be fixed, but drag cubes are a goddamn insanity rune
+	MODULE
+	{
+		name = ModuleAblator
+		ablativeResource = Ablator
+		outputResource = CharredAblator
+		outputMult = 0	//Don't actually outpuy charred ablator, doesn't matter that much with an amount this small
+		lossExp = -6000
+		lossConst = 1.1	//Buffed to keep temp below 1255 K
+		pyrolysisLossFactor = 7800
+		ablationTempThresh = 750
+		reentryConductivity = 0.0065
+		infoTemp = 1255
+	}
+	RESOURCE
+	{
+		name = Ablator
+		maxAmount = 10
+		amount = 10
 	}
 
 	MODULE
