Minor rebalancing to ablator loads

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBDBBlockIII+.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloCMBDBBlockIII+.cfg
@@ -121,12 +121,13 @@ PART
 		infoTemp = 3000
 	}
 	
-	//Remove Ablator, not needed for LEO reentry
+	//Reduce Ablator, not needed for LEO reentry
+	//Leave ability to add Ablator back to lunar levels
 	RESOURCE
 	{
 		name = Ablator
 		maxAmount = 184.84	//407.5 lbs
-		amount = 0
+		amount = 18.4
 	}
 	RESOURCE
 	{
