--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -262,8 +262,8 @@ PART
 		outputResource = CharredAblator
 		outputMult = 0	//Don't actually outpuy charred ablator, doesn't matter that much with an amount this small
 		lossExp = -6000
-		lossConst = 1.1	//Buffed to keep temp below 1255 K
-		pyrolysisLossFactor = 7800
+		lossConst = 5.0	//Buffed to keep temp below 1255 K
+		pyrolysisLossFactor = 25000	//really high so this doesn't need a bunch of ablator
 		ablationTempThresh = 750
 		reentryConductivity = 0.0065
 		infoTemp = 1255
